--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -137,8 +137,8 @@ body {
   color: #000dff;
   overflow-y: hidden;
   overflow-x: hidden;
-  cursor: url("cursor2.cur") -50 -50, auto!important;
-    /* font-family: 'IBMPlexMono';  */
+  cursor: url("new.cur") -50 -50, auto!important;
+  /* font-family: 'IBMPlexMono';  */
     background: #00002C;
     transition: all 0.75s ease-in-out;
     transition: opacity 0.35s, padding-left 0.75s;
@@ -494,14 +494,14 @@ option {
 .subTextOpacitymobile{
     position: relative;
     text-align: left;
-    word-spacing: 0.5rem;
+    /* word-spacing: 0.5rem; */
     margin: var(--s-10) auto;
     justify-content: center;
     width: 100vw;
     z-index: 100 !important;
     text-transform: uppercase;
     align-items: center;
-    font-size: 2vw;
+    font-size: 3.5vw !important;
     color: white;
     text-transform: none;
     padding-left: calc(4.5vw + 1px);
@@ -1291,6 +1291,8 @@ z-index: 10000;
     font-size: 3.5vw;
     color: white;
     text-transform: none;
+    padding-left: calc(2.5vw + 1px);
+    padding-right: calc(1.5vw + 1px);
 }
 
 
@@ -1862,7 +1864,7 @@ width: 100%;
 
 .bottomcont{
   position: absolute;
-  bottom: 7vw;
+  bottom: 2vw;
   z-index: 1000;
   /* display: flex; */
   mix-blend-mode: difference;
@@ -1884,6 +1886,207 @@ width: 100%;
   align-items: center;
   height: 100vh;
 }
+
+
+
+
+
+
+
+
+
+/* ---------- accordion style start --------------------------------------- */
+
+
+.accordion-bral {
+  min-height: 0;
+  min-width: 220px;
+  width: 100%;
+  height: 100%;
+  /* background-color: #FFF; */
+  margin: 0px!important;
+  mix-blend-mode: difference;
+}
+.accordion-bral .ac-label {
+  /* font-family: Arial, sans-serif;
+  padding: 5px 20px;
+  position: relative;
+  display: block;
+  height: auto;
+  cursor: pointer;
+  color: #777; */
+  /* line-height: 33px; */
+  font-size: 19px;
+  font-size: 3.5vw;
+  color: white;
+  position: relative;
+  text-align: left;
+  /* word-spacing: 0.5rem; */
+  margin: var(--s-10) auto;
+  justify-content: center;
+  width: 100vw;
+  z-index: 100 !important;
+  text-transform: uppercase;
+  align-items: center;
+  font-size: 3.5vw !important;
+  color: white;
+  text-transform: none;
+  padding-left: calc(4.5vw + 1px);
+  padding-right: calc(6.5vw + 1px);
+  padding-left: calc(5.5vw + 1px);
+  padding-right: calc(1.5vw + 1px);
+  width: 99vw;
+  /* background: #EFEFEF; */
+  /* border: 1px solid #CCC; */
+}
+.accordion-bral .ac-label:hover {
+  /* background: #BBB; */
+}
+.accordion-bral input + .ac-label  {
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.accordion-bral input:checked + .ac-label,
+.accordion-bral input:checked + .ac-label:active {
+  /* color: #FFF; */
+  mix-blend-mode: difference;
+}
+.accordion-bral input.ac-input {
+  display: none;
+}
+.accordion-bral .article {
+  /* background: rgb(240, 240, 240); */
+  overflow: hidden;
+  height: 0px;
+  max-height: auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.accordion-bral .article p {
+  /* color: #777; */
+  /* line-height: 23px; */
+  /* font-size: 14px;
+  padding: 20px; */
+  font-size: 3.5vw !important;
+  padding-left: calc(4.5vw + 1px);
+  padding-right: calc(6.5vw + 1px);
+  padding-left: calc(5.5vw + 1px);
+  padding-right: calc(1.5vw + 1px);
+  color: white;
+  padding-top: 0vh;
+  mix-blend-mode: difference;
+}
+.accordion-bral input:checked ~ .article i {
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  -ms-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+.accordion-bral input:checked ~ .article.ac-content {
+  height: auto;
+  position: relative;
+  text-align: left;
+  /* word-spacing: 0.5rem; */
+  margin: var(--s-10) auto;
+  justify-content: center;
+  width: 100vw;
+  z-index: 100 !important;
+  text-transform: uppercase;
+  align-items: center;
+  color: white;
+  text-transform: none;
+  width: 99vw;
+  mix-blend-mode: difference;
+  padding-top: 0vh !important;
+  margin-top: 0vh !important;
+}
+
+.accordion-bral i {
+  position: absolute;
+  transform: translate(-30px, 0);
+  margin-top: 16px;
+  right: 0;
+}
+.accordion-bral input:checked ~ .ac-label i:before {
+  transform: translate(2px, 0) rotate(-45deg);
+}
+.accordion-bral input:checked ~ .ac-label i:after {
+  transform: translate(-2px, 0) rotate(45deg);
+}
+.accordion-bral i:before, .accordion-bral i:after {
+  content: "";
+  position: absolute;
+  /* background-color: #808080; */
+  width: 3px;
+  height: 9px;
+}
+.accordion-bral i:before {
+  transform: translate(-2px, 0) rotate(-45deg);
+}
+.accordion-bral i:after {
+  transform: translate(2px, 0) rotate(45deg);
+}
+ul.ac-list {
+  padding-left: 40px;
+  list-style-type: disc;  
+}
+
+table.ac-table {
+  margin: 20px 0 20px 20px;
+}
+table.ac-table th{
+  text-align: left;
+}
+
+@media (max-width: 550px) {
+  .accordion-bral .ac-label {
+  font-family: Arial, sans-serif;
+  /* padding: 5px 20px; */
+  position: relative;
+  display: block;
+  height: auto;
+  padding-right: 40px;
+  cursor: pointer;
+  color: #777;
+  /* line-height: 33px; */
+  font-size: 19px;
+  font-size: 3.5vw;
+  color: white;
+  /* background: #EFEFEF; */
+  /* border: 1px solid #CCC; */
+  position: relative;
+  text-align: left;
+  /* word-spacing: 0.5rem; */
+  margin: var(--s-10) auto;
+  justify-content: center;
+  width: 100vw;
+  z-index: 100 !important;
+  text-transform: uppercase;
+  align-items: center;
+  font-size: 3.5vw !important;
+  color: white;
+  text-transform: none;
+  padding-left: calc(4.5vw + 1px);
+  padding-right: calc(6.5vw + 1px);
+  padding-left: calc(5.5vw + 1px);
+  padding-right: calc(1.5vw + 1px);
+  width: 99vw;
+}
+  .accordion-bral i {
+  position: absolute;
+  transform: translate(-30px, 0);
+  margin-top: 2%;
+  right: 0;
+}
+}
+/* ---------- accordion style end --------------------------------------- */
 
 
 /* ---------------------------------- mobile */
@@ -1915,7 +2118,7 @@ width: 100%;
     width: 100vw;
     z-index: 1000;
     backdrop-filter: blur(4px);
-    background: #2020643b;
+    /* background: #2020643b; */
     /* max-width: 480px; */
     margin: auto;
     /* background-color: #555; */
@@ -1928,17 +2131,22 @@ width: 100%;
     flex-wrap: nowrap;
     align-content: center;
     justify-content: flex-start;
+    color: white;
+    mix-blend-mode: difference;
   }
   
   .topnav {
+    font-size: 4vw;
     overflow: hidden;
     /* background-color: #333; */
     position: relative;
     font-size: 1.9rem;
+    font-size: 4vw;
   }
   
   .topnav #myLinks {
-    display: none;
+   float: right;
+    text-align: right;  display: none;
   }
   
   .topnav a {
@@ -1948,6 +2156,7 @@ width: 100%;
     /* font-size: 17px; */
     display: block;
     mix-blend-mode: difference;
+    font-size: 4vw;
   }
   
   .topnav a.icon {
@@ -1984,7 +2193,7 @@ width: 100%;
     width: 100vw;
     z-index: 1000;
     backdrop-filter: blur(4px);
-    background: #2020643b;
+    /* background: #2020643b; */
     /* max-width: 480px; */
     margin: auto;
     /* background-color: #555; */
@@ -1997,16 +2206,20 @@ width: 100%;
     flex-wrap: nowrap;
     align-content: center;
     justify-content: flex-start;
+    color: white;
+    mix-blend-mode: difference;
   }
   
   .topnav {
+    font-size: 4vw;
     overflow: hidden;
     /* background-color: #333; */
     position: relative;
   }
   
   .topnav #myLinks {
-    display: none;
+   float: right;
+    text-align: right;  display: none;
   }
   
   .topnav a {
@@ -2076,7 +2289,7 @@ width: 100%;
     width: 100vw;
     z-index: 1000;
     backdrop-filter: blur(4px);
-    background: #2020643b;
+    /* background: #2020643b; */
     /* max-width: 480px; */
     margin: auto;
     /* background-color: #555; */
@@ -2089,16 +2302,20 @@ width: 100%;
     flex-wrap: nowrap;
     align-content: center;
     justify-content: flex-start;
+    color: white;
+    mix-blend-mode: difference;
   }
   
   .topnav {
+    font-size: 4vw;
     overflow: hidden;
     /* background-color: #333; */
     position: relative;
   }
   
   .topnav #myLinks {
-    display: none;
+   float: right;
+    text-align: right;  display: none;
   }
   
   .topnav a {
@@ -2146,7 +2363,11 @@ font-size: 3vw;
 
   .livetextmobile{
     padding-top: 11vh;
-    font-size: 13vh;
+    font-size: 16vh;
+    padding-top: 5vh;
+    font-size: 15.5vh;
+    /* font-size: 12.5vh; */
+    /* max-width: 80vw;*/
   }
 
   .subTextOpacitymobile{
@@ -2164,12 +2385,13 @@ font-size: 3vw;
     width: 100vw;
     z-index: 1000;
     backdrop-filter: blur(4px);
-    background: #2020643b;
+    /* background: #2020643b; */
     /* max-width: 480px; */
     margin: auto;
     /* background-color: #555; */
     /* height: 500px; */
-    /* color: white; */
+    color: white;
+    mix-blend-mode: difference;
     border-radius: 10px;
     /* position: relative; */
     display: flex;
@@ -2177,16 +2399,20 @@ font-size: 3vw;
     flex-wrap: nowrap;
     align-content: center;
     justify-content: flex-start;
+    color: white;
+    mix-blend-mode: difference;
   }
   
   .topnav {
+    font-size: 4vw;
     overflow: hidden;
     /* background-color: #333; */
     position: relative;
   }
   
   .topnav #myLinks {
-    display: none;
+   float: right;
+    text-align: right;  display: none;
   }
   
   .topnav a {
